--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 13 2021 02:24:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 13 2021 06:08:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -453,15 +453,7 @@ window.Papercups = {
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
-          <div class="feat">Granular user permissions</div>
-          <div class="pricingtable-hovershade"></div>
-        </div>
-        <div class="feattable-feat">
-          <div class="feat">Collaborative editing</div>
-          <div class="pricingtable-hovershade"></div>
-        </div>
-        <div class="feattable-feat">
-          <div class="feat">Commenting in editor</div>
+          <div class="feat">Collaborative editing &amp; commenting</div>
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
@@ -501,10 +493,6 @@ window.Papercups = {
         </div>
         <div class="feattable-feat">
           <div class="feat">Email collection</div>
-          <div class="pricingtable-hovershade"></div>
-        </div>
-        <div class="feattable-feat">
-          <div class="feat">Custom theme block code upload</div>
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
@@ -574,10 +562,8 @@ window.Papercups = {
           <div class="feat">5</div>
         </div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"></div>
+        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
+        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
           <div class="feat">1</div>
         </div>
@@ -587,7 +573,6 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -615,8 +600,6 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
           <div class="feat">2</div>
         </div>
@@ -626,8 +609,7 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"></div>
+        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
           <div class="feattable-yesno"></div>
         </div>
@@ -656,13 +638,10 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
           <div class="feat">8</div>
         </div>
         <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
@@ -695,13 +674,10 @@ window.Papercups = {
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
           <div class="feat">Unlimited</div>
         </div>
         <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
