--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 13 2021 06:17:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 13 2021 06:54:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -333,7 +333,7 @@ window.Papercups = {
             </div>
           </div>
           <div class="pricing-column-parent learnmore">
-            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 1 month</a>
+            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 2 weeks</a>
           </div>
           <div class="pricing-column-parent">
             <h3 class="pricingtable-plan">Publisher</h3>
@@ -369,7 +369,7 @@ window.Papercups = {
             </div>
           </div>
           <div class="pricing-column-parent learnmore">
-            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 1 month</a>
+            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 2 weeks</a>
           </div>
           <div class="pricing-column-parent last">
             <h3 class="pricingtable-plan">Enterprise</h3>
@@ -400,7 +400,7 @@ window.Papercups = {
             </div>
           </div>
           <div class="pricing-column-parent last learnmore">
-            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 1 month</a>
+            <a href="#Footer-CTA" class="blog-link pricing-learnmore">Try free for 2 weeks</a>
           </div>
         </div>
       </div>
@@ -429,7 +429,7 @@ window.Papercups = {
           <div class="text-block-69">Collaboration basics</div>
         </div>
         <div class="feattable-feat">
-          <div class="feat">Staff Writers</div>
+          <div class="feat">Active Users</div>
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
@@ -554,7 +554,7 @@ window.Papercups = {
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno">
-          <div class="feat">1 Million</div>
+          <div class="feat">5,000</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
@@ -595,7 +595,7 @@ window.Papercups = {
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno">
-          <div class="feat">Unlimited</div>
+          <div class="feat">5</div>
         </div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
@@ -628,12 +628,12 @@ window.Papercups = {
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno">
-          <div class="feat">1 Million</div>
+          <div class="feat">2 Million</div>
         </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno">
-          <div class="feat">Unlimited</div>
+          <div class="feat">30</div>
         </div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
