--- a/pricing.html
+++ b/pricing.html
@@ -262,7 +262,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Pricing Example</h3>
             </div>
-            <div>Your publication is on the Blogger plan ($11 / Editor / M) and has 2 Editors and 6 Writers. <br></div>
+            <div>Your publication is on the Blogger plan ($14 / Editor / M) and has 2 Editors and 6 Writers. <br></div>
           </div>
         </div>
         <div class="div-block-1469"></div>
@@ -271,7 +271,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Your Bill</h3>
             </div>
-            <div>$22/M ($11 * 2 Editors). Only users with Editor permissions count for billing. No extra data fees. No complex add ons. Simple.</div>
+            <div>$28/M ($14 x 2 Editors). Only users with Editor permissions count for billing. No extra data fees. No complex add ons. Simple.</div>
           </div>
         </div>
       </div>
