--- a/pricing.html
+++ b/pricing.html
@@ -262,7 +262,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Pricing Example</h3>
             </div>
-            <div>Your publication is on the Blogger plan ($14 / Editor / M) and has 2 Editors and 6 Writers. <br></div>
+            <div>Your publishing team is on the Blogger plan ($14 / Editor / M), and consists of 2 Editors and 6 Writers. <br></div>
           </div>
         </div>
         <div class="div-block-1469"></div>
