--- a/pricing.html
+++ b/pricing.html
@@ -702,8 +702,8 @@ window.Papercups = {
       <div class="w-layout-grid grid-2 pricing">
         <div>
           <div class="pricing-more-features-image-parent"><img src="images/Smiley.svg" loading="lazy" alt="" class="image-35"></div>
-          <h4 class="all-plans-titile">75% off for Students + Non-Profits</h4>
-          <div class="all-plans-description">Storipress proudly supports youth media and ethical journalism and provides a 75% discount on to student publications and not-for-profits. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
+          <h4 class="all-plans-titile">Unlimited Seats for Students + Non-Profits</h4>
+          <div class="all-plans-description">Storipress proudly supports youth media and ethical journalism and provides unlimited editors for student and non-profit local publications on a single seat plan. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
           </div>
         </div>
         <div>
@@ -776,7 +776,7 @@ window.Papercups = {
           <div class="dropdown-text">Do you have discounts for student publications or nonprofits?</div>
         </div>
         <nav class="dropdown-list-2 w-dropdown-list">
-          <div class="text-block-65">Yes! Storipress is 75% off for student publications and nonprofits.<strong> </strong>Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong></div>
+          <div class="text-block-65">Yes! Storipress provides unlimited editors for student and non-profit local publications on a single seat plan. Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong></div>
         </nav>
       </div>
       <div class="horizontal-divider"></div>
