updated trial period

--- a/pricing.html
+++ b/pricing.html
@@ -746,7 +746,7 @@ window.Papercups = {
           <div class="dropdown-text">Can I trial Storipress?</div>
         </div>
         <nav class="dropdown-list-2 w-dropdown-list">
-          <div class="text-block-65">Absolutely! All our paid plans come with free one month trial.</div>
+          <div class="text-block-65">Absolutely! All our plans have a free 2 week trial.</div>
         </nav>
       </div>
       <div class="horizontal-divider"></div>
