--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 13 2021 06:54:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 07 2021 07:19:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -262,7 +262,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Pricing Example</h3>
             </div>
-            <div>Your publishing team is on the Blogger plan ($14 / Editor / M), and consists of 2 Editors and 6 Writers. <br></div>
+            <div>Your publishing team is on the Blogger plan ($14 / Editor / M), and consists of 2 Editors and 6 Writers.<br></div>
           </div>
         </div>
         <div class="div-block-1469"></div>
@@ -271,7 +271,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Your Bill</h3>
             </div>
-            <div>$28/M ($14 x 2 Editors). Only users with Editor permissions count for billing. No extra data fees. No complex add ons. Simple.</div>
+            <div>Only Editors count for billing, so your monthly subscription is $28/M ($14 * 2 Editors). No extra data fees. No complex add ons. Simple.</div>
           </div>
         </div>
       </div>
@@ -702,8 +702,8 @@ window.Papercups = {
       <div class="w-layout-grid grid-2 pricing">
         <div>
           <div class="pricing-more-features-image-parent"><img src="images/Smiley.svg" loading="lazy" alt="" class="image-35"></div>
-          <h4 class="all-plans-titile">Unlimited Seats for Students + Non-Profits</h4>
-          <div class="all-plans-description">Storipress proudly supports youth media and ethical journalism and provides unlimited editors for student and non-profit local publications on a single seat plan. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
+          <h4 class="all-plans-titile">Supporting Students and Non-Profits</h4>
+          <div class="all-plans-description">Storipress proudly supports youth media and ethical journalism and provides 15 Editor seats for student and non-profit local publications on a single seat plan. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
           </div>
         </div>
         <div>
@@ -776,7 +776,7 @@ window.Papercups = {
           <div class="dropdown-text">Do you have discounts for student publications or nonprofits?</div>
         </div>
         <nav class="dropdown-list-2 w-dropdown-list">
-          <div class="text-block-65">Yes! Storipress provides unlimited editors for student and non-profit local publications on a single seat plan. Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong></div>
+          <div class="text-block-65">Yes! Students and non-profits get 15 Editor seats on a single seat plan.<strong> </strong>Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong></div>
         </nav>
       </div>
       <div class="horizontal-divider"></div>
